--- a/static/css/atividades.css
+++ b/static/css/atividades.css
@@ -1,10 +1,19 @@
+.curso-section {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 .atividades {
-  margin-top: 36px;
+  margin-top: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 32x;
 }
 
 .atividades h2 {
   font-size: 1.4rem;
-  margin-bottom: 16px;
+  margin-bottom: 8px;
 }
 
 .atividade-lista {
