--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -32,7 +32,7 @@
         </p>
     </section>
 
-    <section class="acoes">
+    <section class="inicio-acoes">
         <a href="{{ url_for('publicar') }}" class="btn btn-primary">
             Publicar atividade
         </a>
@@ -45,7 +45,7 @@
 </main>
 
 <footer>
-  <p>© 2026 - Include: Repositório de Atividades Adaptadas para NEE dos Cursos Técnicos</p>
+  <p>© 2026 - Include: Repositório de Atividades Adaptadas para NEE nos Cursos Técnicos</p>
 </footer>
 
 {% endblock %}
