--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <title>Include - {% block title %}Document{% endblock %}</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/specific_styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/botoes.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/forms.css') }}">
