--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -5,10 +5,10 @@
 {% block content %}
 
 
-<main class="main-container institucional">
+<main class="main-container ">
 
     <section class="intro">
-        <h1>Repositório de Atividades Adaptadas</h1>
+        <h1>Include: Repositório de Atividades Adaptadas para NEE dos Cursos Técnicos</h1>
         <p class="subtitle">
             Plataforma colaborativa destinada à disponibilização de atividades
             educacionais adaptadas para estudantes com Necessidades Educacionais
@@ -33,12 +33,14 @@
     </section>
 
     <section class="inicio-acoes">
-        <a href="{{ url_for('publicar') }}" class="btn btn-primary">
-            Publicar atividade
+        <a href="{{ url_for('publicar') }}" class="btn-action">
+            <img src="{{ url_for('static', filename='images/icons/icon-publi-preto.png') }}" alt="">
+            <span>Publique uma atividade</span>
         </a>
 
-        <a href="{{ url_for('home') }}" class="btn btn-outline">
-            Conhecer o repositório
+        <a href="{{ url_for('home') }}" class="btn-action">
+            <img src="{{ url_for('static', filename='images/icons/icon-repo.png') }}" alt="">
+            <span>Conheça o repositório</span>
         </a>
     </section>
 
