--- a/static/css/botoes.css
+++ b/static/css/botoes.css
@@ -83,9 +83,58 @@
 }
 
 .btn-icon-danger:hover {
-  background: #e2e8f0;
+  background: #d9dadc;
   background-color: rgba(220, 38, 38, 0.1);
 }
+
+/* -------- ACOES -------- */
+.btn-action {
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+
+  margin: 8px;
+  padding: 12px 18px;
+  border-radius: 10px;
+
+  background-color: var(--amarelo-destaque);
+
+  text-decoration: none;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: var(--texto-principal);
+
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.06);
+
+  transition: transform 0.15s ease,
+              box-shadow 0.15s ease,
+              background-color 0.2s ease;
+}
+
+.btn-action img {
+  width: 22px;
+  height: 22px;
+  flex-shrink: 0;
+}
+
+.btn-action:hover {
+  background-color: var(--amarelo-hover);
+}
+
+@media (max-width: 600px) {
+  .btn-action {
+    justify-content: center;
+    padding: 10px;
+    border-radius: 12px;
+  }
+
+  .btn-action img {
+    width: 24px;
+    height: 24px;
+  }
+}
+
+
 
 /* -------- PUBLICAR -------- */
 .publish-wrapper {
