--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
 <body>
     <header>
         <nav class="navbar-body">
-            <a href="{{url_for('home')}}" class="navbar-brand logo-header">
-                <img src="static/images/logo01.png" alt="Logo">
+            <a href="{{ url_for('home') }}" class="navbar-brand logo-header">
+                <img src="{{ url_for('static', filename='images/logo01.png') }}" alt="Logo">
             
             </a>
 
