--- a/templates/editar_perfil.html
+++ b/templates/editar_perfil.html
@@ -6,12 +6,12 @@
 
 <main class="main-container">
     <div class="container-form">
-        <h1>Editar Perfil</h1>
+        <h2>Editar Perfil</h2>
         {% if current_user.public_id %}
             <img src="{{current_user.foto_url}}" alt="Foto de perfil">
 
             <form action="{{ url_for('delete_image' ) }}" method="post">
-                <button type="submit">Remover Foto</button>
+                <button type="submit" class="btn btn-warning">Remover Foto</button>
             </form>
 
         {% else %}
@@ -23,10 +23,11 @@
             Editar Foto: <input type="file" name="foto_perfilForm" id="">
             Editar Nome Completo: <input type="text" name="nome_completoForm" id="" value="{{current_user.nome_completo}}">
             Editar Nome Usuario: <input type="text" name="nome_usuarioForm" id="" value="{{current_user.nome_usuario}}">
-            Editar Descrição: <input type="text" name="descricaoForm" id="" placeholder="Adicionar descrição..." value="{{current_user.descricao if current_user.descricao else ''}}">
+            Editar Descrição: <textarea name="descricaoForm" maxlength="250" rows="3" placeholder="Adicionar descrição..."
+            >{{ current_user.descricao if current_user.descricao else '' }}</textarea>
             Editar Senha: <input type="password" name="senhaForm" id="">
             Confirmar Senha <input type="password" name="confirmacao_senhaForm" id="">
-            <input type="submit" value="Salvar Alterações">
+            <input type="submit" value="Salvar Alterações" class="btn btn-primary">
 
         </form>
 
