--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
 
   <div class="home-header">
    <h2>Olá, {{ current_user.nome_completo }} 👋</h2>
-    <p>Começe a explorar nossa biblioteca de atividade aqui!</p>
+    <p>Começe a explorar nossa biblioteca de atividades aqui!</p>
 
   </div>
 
