--- a/templates/publicar.html
+++ b/templates/publicar.html
@@ -6,7 +6,7 @@
 
 <main class="main-container">
     <div class="container-form">
-        <h1>Publicar Atividade Adaptada</h1>
+        <h2>Publicar Atividade Adaptada</h2>
         <form action="" method="post" enctype="multipart/form-data">
             Adicionar Arquivo: <input type="file" name="arquivoForm" id="" required>
             Titulo: <input type="text" name="tituloForm" id="" required>
@@ -26,7 +26,8 @@
                         
                     {% endfor %}
             </select>
-            <button type="submit" class="btn btn-warning">Publicar</button> 
+            <input type="submit" value="Publicar" class="btn btn-action-submit">
+
         </form>
 
     </div>
