--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -4,57 +4,62 @@
 
 {% block content %}
 
-<main class="container-form">
-  <h2>Cadastrar</h2>
+<main class="main-container">
+  <div class="container-form">
+    <h2>Cadastrar</h2>
 
-  <form action="" method="post" id="formCadastro">
+    <form action="" method="post" id="formCadastro">
 
-    <div class="form-group">
-      <label for="nome_completo">Nome completo</label>
-      <input type="text" id="nome_completo" name="nome_completoForm" required>
-      <div class="invalid-feedback">
-        Informe seu nome.
+      <div class="form-group">
+        <label for="nome_completo">Nome completo</label>
+        <input type="text" id="nome_completo" name="nome_completoForm" placeholder="Exemplo Nome" required>
+        <div class="invalid-feedback">
+          Informe seu nome.
+        </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <label for="nome_usuario">Nome de usuário</label>
-      <input type="text" id="nome_usuario" name="nome_usuarioForm" required>
-      <div class="invalid-feedback">
-        Informe um nome de usuário.
+      <div class="form-group">
+        <label for="nome_usuario">Nome de usuário</label>
+        <input type="text" id="nome_usuario" name="nome_usuarioForm" placeholder="exemplo_usuario" required>
+        <div class="invalid-feedback">
+          Informe um nome de usuário.
+        </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <label for="emailCadastro">E-mail</label>
-      <input type="email" id="emailCadastro" name="emailForm" required>
-      <div class="invalid-feedback">
-        Informe um e-mail válido.
+      <div class="form-group">
+        <label for="emailCadastro">E-mail</label>
+        <input type="email" id="emailCadastro" name="emailForm" placeholder="exemplo@email.com" required>
+        <div class="invalid-feedback">
+          Informe um e-mail válido.
+        </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <label for="senhaCadastro">Senha</label>
-      <input type="password" id="senhaCadastro" name="senhaForm" required>
-      <div class="invalid-feedback">
-        Informe uma senha.
+      <div class="form-group">
+        <label for="senhaCadastro">Senha</label>
+        <input type="password" id="senhaCadastro" name="senhaForm" required>
+        <div class="invalid-feedback">
+          Informe uma senha.
+        </div>
       </div>
-    </div>
 
-    <div class="form-group">
-      <label for="confirmarSenha">Confirmar senha</label>
-      <input type="password" id="confirmarSenha" name="confirmacao_senhaForm" required>
-      <div class="invalid-feedback">
-        Confirme sua senha.
+      <div class="form-group">
+        <label for="confirmarSenha">Confirmar senha</label>
+        <input type="password" id="confirmarSenha" name="confirmacao_senhaForm" required>
+        <div class="invalid-feedback">
+          Confirme sua senha.
+        </div>
       </div>
-    </div>
 
-    <button type="submit" class="btn btn-warning btn-block">Cadastrar</button>
-  </form>
+      <input type="submit" value="Cadastrar" class="btn btn-primary">
+      
+    </form>
 
-  <p>Já possui cadastro?<br>
-    <a href="{{ url_for('login') }}">Faça login</a>.
-  </p>
+    <p>Já possui cadastro?<br>
+      <a href="{{ url_for('login') }}">Faça login</a>.
+    </p>
+
+  </div>
+
 </main>  
 
 {% endblock %}
